# beeware-tutorial

./: pyproject.toml
helloworld/: LICENSE  pyproject.toml
helloworld/src/helloworld/: app.py
helloworld/src/helloworld.dist-info/: METADATA
tests/: test_beeware_tutorial.py
