[tool.poetry]
name = "beeware-tutorial"
version = "0.1.0"
description = ""
authors = ["chemacortes <devxtrem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
briefcase = "^0.3.5"
mypy = "^0.931"
pylama = "^8.3.7"
bandit = "^1.7.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
